# EdgeAI_Package_Transport_Adaptive_Reasoning_demo_NXP_FRDM-MCXN947

./: .gitignore  AGENTS.md  README.md  STATUS.md
backups/: post_compass_down_mag_audit_20260218T164056Z.patch  post_mag_restore_attempt_20260218T165351Z.patch  pre_elapsed_fix_20260218T081105.patch
backups/recover_20260218T195422Z/: edgeai_package_transport_anomaly_demo.c  gauge_render.h
data/: ev_charge_12min_fault_20hz.csv  ev_charge_12min_normal_20hz.csv  ev_charge_12min_wear_20hz.csv  ev_charging_demo_5min.csv  replay_trace.csv
docs/: AI_RUNTIME_REFERENCE.md  BUILD_FLASH.md  CODER_HANDOFF.md  COMMAND_LOG.md  HARDWARE_SETUP.md  OPS_RUNBOOK.md  PROJECT_STATE.md  RESTORE_POINTS.md  START_HERE.md  SYSTEM_DESIGN.md  TEMP_COMBINED_STATE.md  TODO.md  failsafe.md
failsafe/: README_GOLDEN.txt
sdk_example/: install_mcux_overlay.sh
sdk_example/mcuxsdk_examples_overlay/_boards/frdmmcxn947/demo_apps/edgeai_package_transport_anomaly_demo/: hardware_init.c  pin_mux.c
sdk_example/mcuxsdk_examples_overlay/_boards/frdmmcxn947/demo_apps/edgeai_package_transport_anomaly_demo/cm33_core0/: hardware_init.c  prj.conf
sdk_example/mcuxsdk_examples_overlay/demo_apps/edgeai_package_transport_anomaly_demo/: CMakeLists.txt  Kconfig  example.yml  readme.md
src/: anomaly_engine.c  anomaly_engine.h  edgeai_package_transport_anomaly_demo.c  eil_profile.c  eil_profile.h  eil_profile_generated.h  ext_flash_recorder.c  ext_flash_recorder.h  gauge_render.c  gauge_render.h  gauge_style.c  gauge_style.h  par_lcd_s035.c  power_data_source.c  power_data_source.h  real_telemetry.c  real_telemetry.h  replay_trace_generated.h  spacebox_bg.h  text5x7.c  timebase_test_main.c
tools/: bootstrap_ubuntu_user.sh  build_frdmmcxn947.sh  capture_energy_trace.sh  capture_uart_telemetry.sh  flash_failsafe.sh  flash_frdmmcxn947.sh  generate_ev_charge_profiles.py  import_eil_profile.py  mcux_env.sh  patch_mcuxsdk.sh  scan_shield_sensors.sh  setup_mcuxsdk_ws.sh  trace_convert.py  trace_csv_to_header.py
